--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "flag-icon-css": "^4.1.4",
     "i18next": "^21.2.6",
     "i18next-browser-languagedetector": "^6.1.2",
-    "pagination": "github:react-bootstrap/Pagination",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.12.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
@@ -44,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.8",
+    "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.2"
   }
 }
